[package]
name = "azkaban"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Config & serialization
serde = { version = "1", features = ["derive"] }

# Error handling
color-eyre = "0.6"

# Time (for session timestamps)
chrono = { version = "0.4", features = ["serde"] }

# Glob patterns for project dirs
glob = "0.3"

# YAML parsing (Copilot session files)
serde_yaml = "0.9"
